# CLI-File-Converter

./: Cargo.toml  README.md  install.sh
src/: main.rs
