[package]
name = "CLI-File-Converter"
version = "0.1.0"
edition = "2021"
authors = ["Fernando Alzueta <devfernandoa@gmail.com>"]

[dependencies]
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.5"
csv = "1.1"
image = "0.24"

[[bin]]
name = "cv"
path = "src/main.rs"